# ANALYZED

./: README.md
src/: data.csv  home.css  home.html  home.js  index.html  settings.css  settings.html  settings.js  start.css  start.js  style.css  svg-export.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/config/: config.json
src/tree-table/codebase/: webix.css  webix.js  webix.js.map
src/tree-table/codebase/skins/: flat.css
