[package]
name = "analyzed"
version = "0.0.0"
description = "A Linux Disk Analyzer"
authors = ["Ibrahim Gohar"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = {version = "1.2", features = ["api-all"] }
nfd = "0.0.4"
rand = "0.8.5"
rayon = "1.6.0"
chrono = "0.4.23"
futures = "0.3.25"
run_script = "0.10.0"
regex = "1.7.0"
lazy_static = "1.4.0"
dirstat-rs = "0.3.7"
opener = "0.5.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
